src/objects/Financial_Institution__c.object
<CustomObject>
    <description>SARA</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>SARA</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agent_IATA_code__c</fullName>
        <formula>Related_IATA_agent_account__r.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows the code of the agent that is acting as guarantor</inlineHelpText>
        <label>Agent IATA code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>AA+</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AA-</fullName>
                </value>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>BBB+</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>BBB-</fullName>
                </value>
                <value>
                    <fullName>BB+</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BB-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>RD</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>SARA</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Financial_Institution_ID__c</fullName>
        <displayFormat>FI-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Financial Institution ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Financial_Security_Country_Coverage__c</fullName>
        <inlineHelpText>Select all countries where this Financial Institution provides Financial Security. Used to show list of Financial Institutions on CS Portal.</inlineHelpText>
        <label>Financial Security Country Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_Security_Country_Coverage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Security_Regional_Coverage__c</fullName>
        <label>Financial Security Regional Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_Security_Regional_Coverage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Call_Letter_required__c</fullName>
        <description>States if financial securities under this Financial institution require First Call Letter</description>
        <label>First Call Letter required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Institution_Status_Image__c</fullName>
        <formula>IF(ISPICKVAL(Institution_Status__c,&quot;&quot;), &quot;&quot;, IF(ISPICKVAL(Institution_Status__c , &quot;Inactive&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015w0000004cgNr&quot;,&quot;Inactive&quot;,30,30), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015w0000004cgNm&quot;,&quot;Active&quot;,30,30)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Status Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Status__c</fullName>
        <label>Institution Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <description>SARA</description>
        <label>Institution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                    <default>true</default>
                    <label>Bank</label>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>IATA Agent</fullName>
                </value>
                <value>
                    <fullName>Mutual Guarantee Society</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>SARA</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia &amp; Pacific</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_IATA_agent_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SARA</description>
        <inlineHelpText>If the guarantor is an IATA agent, fill it here</inlineHelpText>
        <label>Related IATA agent account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Institutions</relationshipLabel>
        <relationshipName>Financial_Institutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <description>SARA</description>
        <label>Tax ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Financial Institution</label>
    <listViews>
        <fullName>AME_Financial_Institutions</fullName>
        <columns>NAME</columns>
        <columns>Institution_Type__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Africa &amp; Middle East</value>
        </filters>
        <label>AME Financial Institutions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>AfricaMEAccManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A_P_Financial_Institutions</fullName>
        <columns>NAME</columns>
        <columns>Institution_Type__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Asia &amp; Pacific</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>A&amp;P Financial Institutions</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAllusersexcludingIWandACCA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_NA_Financial_Institutions</fullName>
        <columns>NAME</columns>
        <columns>Institution_Type__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>China &amp; North Asia</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>C&amp;NA Financial Institutions</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAllusersexcludingIWandACCA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_Financial_Institutions</fullName>
        <columns>NAME</columns>
        <columns>Institution_Type__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>EUR Financial Institutions</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAllusersexcludingIWandACCA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_PTFinancial_Institutions</fullName>
        <columns>NAME</columns>
        <columns>Institution_Type__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Portugal</value>
        </filters>
        <label>EUR PT Financial Institutions</label>
        <language>en_US</language>
        <sharedTo>
            <group>HUBMadrid</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Financial_Institutions</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Institution_Type__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Institutions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MADHubSupervisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Financial_Institutions_test</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Institution_Type__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>test</value>
        </filters>
        <label>Financial Institutions test</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MADHubSupervisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>a1_PTFinancial_Institutions</fullName>
        <columns>NAME</columns>
        <columns>Institution_Type__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Americas Financial Institutions</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAmericasallusers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Financial Institution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SARA_Financial_institution_name_no_quote</fullName>
        <active>true</active>
        <description>quotes in financial institution name create issues on integration with AIMS. this avoids that character being entered</description>
        <errorConditionFormula>CONTAINS(Name , &apos;&quot;&apos;)</errorConditionFormula>
        <errorMessage>Please remove the double quotes &quot; from the name</errorMessage>
    </validationRules>
</CustomObject>